--- a/form.html
+++ b/form.html
@@ -19,9 +19,7 @@
       <input
         type="text"
         name="topics" />
-      <input
-        name="bot-field"
-        hidden />
+      <input name="bot-field" />
     </form>
   </body>
 </html>
